# go-inference

./: .gitignore  .gitlab-ci.yml  .gitmodules  .graphifyignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  FINDINGS.md  Makefile  README.md  TODO.md  Taskfile.yml  ax7_test.go  codecov.yml  discover.go  discover_example_test.go  discover_test.go  go.mod  go.sum  go.work  inference.go  inference_test.go  options.go  options_test.go  sonar-project.properties  test_helpers_test.go  training.go  training_example_test.go  training_test.go
.core/: build.yaml  release.yaml
bench/: README.md  gemma4.json
cli/: README.md  bench.go  capture.go  capture_test.go  data.go  data_test.go  ebook.go  ebook_test.go  engine_metal.go  flags.go  generate.go  generate_test.go  go.mod  go.sum  judgedriver.go  judgedriver_test.go  judgetemplate.go  judgetemplate_test.go  main.go  main_test.go  ocr.go  pack.go  pack_test.go  quant.go  quant_test.go  score.go  score_test.go  serve.go  serve_test.go  sft.go  sft_test.go  spec.go  spec_test.go  ssd.go  ssd_test.go  transcribe.go  transcribe_test.go  tune.go  tune_test.go  update.go  (+1 more)
docs/: README.md  RFC.models.md  architecture.md  audit-2026-07-16.md  backends.md  build.md  cmd-lem.md  design-composability.md  design-continuous-batching.md  design-dflash-forward.md  design-dflash-survey.md  design-dflash.md  design-family-roadmap.md  design-gd-state-blocks.md  design-hybrid-recurrence.md  design-rocm.md  (+33 more)
examples/sdk/c/: CMakeLists.txt  README.md  main.c  postgen-fix.sh
examples/sdk/rust/: Cargo.toml  README.md
examples/sdk/rust/src/: main.rs
(+4383 files in other folders)
