[package]
name = "lem-sdk-example"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
publish = false

[dependencies]
# The client is GENERATED locally by `task sdk` (build/sdk is gitignored) —
# the path dep points this demo at that output; a published SDK would be a
# normal crates.io dependency.
lem-sdk = { path = "../../../build/sdk/rust" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
